# osint

./: .gitignore  README.md  railway.json
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py  models.py
backend/app/bot/: handlers.py
backend/app/routers/: payments.py  search.py  tariffs.py  users.py
backend/app/services/: osint_aggregator.py  sherlock_service.py  telethon_service.py  tosint_service.py
frontend/: index.html  package-lock.json  package.json  vercel.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: BottomNav.jsx  EncryptedText.jsx  ScanAnimation.jsx  SplashScreen.jsx
frontend/src/pages/: Admin.jsx  Home.jsx  Pay.jsx  Profile.jsx  asd
frontend/src/utils/: api.js  telegram.js
