[tool.poetry]
name = "osint-tma"
version = "0.1.0"
description = "OSINT Telegram Mini App Backend"
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "0.115.0"
uvicorn = {extras = ["standard"], version = "0.30.0"}
motor = "3.3.2"
pymongo = "4.8.0"
python-telegram-bot = "21.5"
telethon = "1.36.0"
pydantic = "2.7.4"
pydantic-settings = "2.4.0"
python-dotenv = "1.0.1"
httpx = "0.27.0"
aiohttp = "3.10.0"
sherlock-project = "0.15.0"
cryptg = "0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
